--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,82 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+.App{
+  display: flex;
+  margin-top: 50px;
+  justify-content: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.wrapper{
+  max-width: 500px;
+  width: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: rgb(72,121,223);
+  background: linear-gradient(90deg, rgba(72,121,223,1) 0%, rgba(69,116,215,1) 33%, rgba(75,201,227,1) 96%);
+  padding: 20px 20px 40px 20px;
+  box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.381);
+  color: white;
+  border-radius: 5px;
+}
+
+.custom-form{
+  width: 400px;
+  height: auto;
+  margin: 20px auto;
+
+}
+
+form .btn{
+  background-color:rgba(32, 156, 222, 0.759);
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.211);
+  color : white;
+}
+.input-and-btn{
+  display: flex;
+}
+
+.todo-box{
+  width: 400px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background: linear-gradient(90deg, rgba(72,121,223,1) 0%, rgba(69,116,215,1) 33%, rgba(75,201,227,1) 96%);
+  padding: 5px 15px;
+  margin-bottom: 5px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.088);
+}
+
+.todo-box:hover{
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.388);
+}
+
+.todo-box .content{
+  display: flex;
+}
+
+.todo-box .content p{
+  margin-top: -6px;
+  margin-left: 6px;
+}
+
+.todo-box span{
+  margin: 0 5px;
+}
+
+.delete-all{
+  width: 400px;
+}
+
+.actions-box{
+  cursor: pointer;
+}
+
+.back-btn{
+  margin-top: 5px;
+  width: 100%;
 }
